학기 관련 기능 추가완료
