# routes/SemesterRoute.js
@@ -5,8 +5,8 @@ const SemesterController = require('../controllers/SemesterController');
 
 router.get('/list', SemesterController.getSemesterList);
 router.post('/', SemesterController.createSemester);
-// router.get('/:semesterId', SemesterController.getSemester);
-// router.put('/:semesterId', SemesterController.updateSemester);
-// router.delete('/:semesterId', SemesterController.deleteSemester);
+router.get('/:semesterId', SemesterController.getSemester);
+router.put('/:semesterId', SemesterController.updateSemester);
+router.delete('/:semesterId', SemesterController.deleteSemester);
 
 module.exports = router;
